@@ -42,18 +42,18 @@ const PKI_X509_CALLBACKS PKI_OPENSSL_X509_CERT_CALLBACKS = {
 
 	/* Data Conversion */
 	(void *) PEM_write_bio_X509, 	// PEM format
-  NULL,  												// PEM EX (encrypted) format
+	NULL,  				// PEM EX (encrypted) format
 	(void *) i2d_X509_bio,	    	// DER format
 	(void *) X509_print,         	// TXT format
-	NULL, 		    								// B64 format (B64_write_bio)
-	NULL,		    									// XML format
+	NULL, 		    		// B64 format (B64_write_bio)
+	NULL,		    		// XML format
 
 	/* Data Conversion */
-	(void *) PEM_read_bio_X509,  // PEM format
-	(void *) d2i_X509_bio,	    // DER format
-	NULL,		    // TXT format
-	NULL,               // B64 format
-	NULL		    // XML format
+	(void *) PEM_read_bio_X509,  	// PEM format
+	(void *) d2i_X509_bio,	    	// DER format
+	NULL,		    		// TXT format
+	NULL,               		// B64 format
+	NULL		    		// XML format
 };
 
 
@@ -70,18 +70,18 @@ const PKI_X509_CALLBACKS PKI_OPENSSL_X509_REQ_CALLBACKS = {
 
 	/* Data Conversion */
 	(void *) PEM_write_bio_X509_REQ, // PEM format
-  NULL,  												// PEM EX (encrypted) format
+	NULL,  				// PEM EX (encrypted) format
 	(void *) i2d_X509_REQ_bio,	// DER format
-	(void *) X509_REQ_print,		// TXT format
+	(void *) X509_REQ_print,	// TXT format
 	(void *) NULL,			// B64 format
 	(void *) NULL,			// XML format
 
 	/* Data Conversion */
 	(void *) PEM_read_bio_X509_REQ,  // PEM format
 	(void *) d2i_X509_REQ_bio,       // DER format
-	(void *) NULL,		        // TXT format
+	(void *) NULL,		         // TXT format
 	(void *) NULL,                   // B64 format
-	(void *) NULL		        // XML format
+	(void *) NULL		         // XML format
 };
 
 const PKI_X509_CALLBACKS PKI_OPENSSL_X509_CRL_CALLBACKS = {
