@@ -210,11 +210,10 @@ PKI_X509_REQ *PKI_X509_REQ_new(const PKI_X509_KEYPAIR *k,
 				val->sig_alg, NULL, val->signature, k, digest);
 	*/
 
-	if (rv == PKI_ERR ) {
+	if (rv != PKI_OK ) {
 		/* Error Signing the request */
-		PKI_log_debug("REQ::ERROR signing the Request [%s]",
+		PKI_log_debug("REQ::ERROR %d signing the Request [%s]", rv,
 			ERR_error_string( ERR_get_error(), NULL ));
-		// ERR_print_errors_fp( stderr );
 		goto err;
 	}
 
@@ -222,8 +221,7 @@ PKI_X509_REQ *PKI_X509_REQ_new(const PKI_X509_KEYPAIR *k,
 	return req;
 
 err:
-	if( req ) PKI_X509_REQ_free ( req );
-	// if( val ) X509_REQ_free ( val );
+	if (req) PKI_X509_REQ_free(req);
 
 	return (NULL);
 }
